--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=KfCa4EfSQsNVReNMsspzz3wwyDdhLEce
 DRIVE_DISK=local
+DB_CONNECTION=sqlite
+SESSION_DRIVER=cookie
